[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heirloom"
version = "0.2.2"
dependencies = [
    "requests",
    "typer",
    "rich",
    "InquirerPy",
    "keyring",
    "cryptography",
    "PySide6>=6.8.0.2,<6.9"
]
requires-python = ">= 3.10"

[project.scripts]
heirloom-gm = "heirloom.cli:main"
heirloom-gui = "heirloom.gui:main"

[tool.setuptools.package-data]
"heirloom.gui" = ["qml/*.qml", "assets/*.png"]
